--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             </div>
         </section>
 
-        <!-- <section class="section section--dark purpose">
+        <section class="section section--dark purpose">
             <div class="container">
                 <div class="row">
                     <div class="col-50">
@@ -345,22 +345,21 @@
                                 Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.
                                 </p>                      
                         </div>
-                    </div>                 -->
-                    <!-- <div class="col-50"> <div class="swiper-container"> -->
-                        <!-- Additional required wrapper -->
-                        <!-- <div class="swiper-wrapper swiper-no-swiping"> -->
+                    </div>                
+                    <div class="col-50"> <div class="swiper-container">
+                        <div class="swiper-wrapper swiper-no-swiping">
                             <!-- Slides -->
-                            <!-- <div class="swiper-slide">
+                            <div class="swiper-slide">
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
                                     <h3 class="swiper-slide__number">01</h3>
                                     <span class="swiper-slide__value">Выезд на замер <br> помещения</span>
-                                </div> -->
-                                <!-- <div class="swiper-slide__text swiper-slide__text__purpose">
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
                                     <h3 class="swiper-slide__number">02</h3>
                                     <span class="swiper-slide__value">Составление <br> сметы</span>
                                 </div>
-                                <div class="swiper-slide__text swiper-slide__text__purpose"> -->
-                                    <!-- <h3 class="swiper-slide__number">03</h3>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
+                                    <h3 class="swiper-slide__number">03</h3>
                                     <span class="swiper-slide__value">Разработка <br> дизайн-проекта</span>
                                 </div>
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
@@ -370,32 +369,32 @@
                                 <div class="swiper-slide__text swiper-slide__text__purpose">
                                     <h3 class="swiper-slide__number">05</h3>
                                     <span class="swiper-slide__value">Ремонтно-отделочные <br> работы</span>
-                                </div> -->
-                                <!-- <div class="swiper-slide__text swiper-slide__text__purpose">
+                                </div>
+                                <div class="swiper-slide__text swiper-slide__text__purpose">
                                     <h3 class="swiper-slide__number">06</h3>
                                     <span class="swiper-slide__value">Прием-сдача <br> работ</span>
                                 </div>
                             </div>
-                        </div> -->
-                        <!-- <div class="swiper-button-prev swiper-button-prev__second"></div>
+                        </div>
+                        <div class="swiper-button-prev swiper-button-prev__second"></div>
                         <div class="swiper-pagination swiper-pagination__second"></div>
                         <div class="swiper-button-next swiper-button-next__second"></div>
                         
                         <div class="swiper-container">
-                            <div class="swiper-wrapper swiper-no-swiping"> -->
+                            <div class="swiper-wrapper swiper-no-swiping">
                                 <!-- Slides -->
-                                <!-- <div class="swiper-slide"><img src="img/slider/img01.jpg" alt=""></div>
+                                <div class="swiper-slide"><img src="img/slider/img01.jpg" alt=""></div>
                                 <div class="swiper-slide"><img src="img/slider/img02.jpg" alt=""></div>
                                 <div class="swiper-slide"><img src="img/slider/img03.jpg" alt=""></div>
                                 <div class="swiper-slide"><img src="img/slider/img04.jpg" alt=""></div>
                                 <div class="swiper-slide"><img src="img/slider/img05.jpg" alt=""></div>
-                                <div class="swiper-slide"><img src="img/slider/img06.jpg" alt=""></div> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                    <!-- </div> -->
-                <!-- </div> -->
-            <!-- </div> -->
-        <!-- </section> -->
+                                <div class="swiper-slide"><img src="img/slider/img06.jpg" alt=""></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="modal">
@@ -428,6 +427,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
