--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -111,21 +111,21 @@
                     <img src="img/play.svg" alt="play icon" class="play video__play">
                 </div>
                 <div class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</div>
-                <form action="" class="form control__form">
+                <form action="#" class="form control__form">
                     <div class="control__input-group">
                         <label for="user-name" class="label form__label control__label label--dark">Имя</label>
-                        <input type="text" class="input form__input control__input" id="user-name" placeholder="Как вас зовут">
+                        <input type="text" class="input form__input control__input" id="user-name" name="userName" placeholder="Как вас зовут">
                     </div>
     
                     <div class="control__input-group">
                         <label for="user-phone" class="label form__label control__label label--dark">Телефон</label>
-                        <input type="tel" class="input form__input control__input" id="user-phone" placeholder="Ваш номер телефона">
+                        <input type="tel" class="input form__input control__input" id="user-phone" name="userPhone" placeholder="Ваш номер телефона">
                     </div>
    
                     <button class="button button--primary control__button">Отправить</button>
 
                     <div class="policy control__policy">
-                        <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
+                        <input type="checkbox" class="policy__checkbox" id="policy-checkbox" name="policyCheckbox" checked>
                         <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
                     </div>
                 </form>
@@ -420,6 +420,7 @@
                     </div>
                 </div>
             </div>
+            </div>
         </section>
     </main>
 
@@ -427,23 +428,23 @@
         <div class="container">
             <div class="footer__wrap">
                 <h3 class="footer__title">Остались вопросы?</h3>
-                <form action="" class="form footer__form">
+                <form action="#" class="form footer__form">
                     <div class="input-group footer__input-group">
                         <label for="user-name" class="label form__label label--light">Имя</label>
-                        <input type="text" class="input form__input footer__input input--light" id="user-name" placeholder="Как вас зовут">
+                        <input type="text" class="input form__input footer__input input--light" id="user--name" name="userName" placeholder="Как вас зовут">
                     </div>
                     <div class="input-group footer__input-group">
                         <label for="user-phone" class="label form__label label--light">Телефон</label>
-                        <input type="tel" class="input form__input footer__input input--light" id="user-phone" placeholder="Ваш номер телефона">
+                        <input type="tel" class="input form__input footer__input input--light" id="user--phone" name="userPhone" placeholder="Ваш номер телефона">
                     </div>
                     <div class="input-group footer__input-group footer__input-group--full">
                         <label for="user-question" class="label form__label label--light">Вопрос</label>
-                        <input type="text" class="input form__input footer__input input--light" id="user-question" placeholder="Я хочу спросить">
+                        <input type="text" class="input form__input footer__input input--light" id="user--question" name="userQuestion" placeholder="Я хочу спросить">
                     </div>
     
                     <div class="policy footer__policy">
-                        <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-                        <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
+                        <input type="checkbox" class="policy__checkbox" id="policy--checkbox" name="policyCheckbox" checked>
+                        <label for="policy--checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
                     </div>
                     <button class="button button--primary footer__button">Отправить</button>
                 </form>
@@ -478,22 +479,22 @@
         <div class="modal__dialog">
             <button class="modal__close"></button>
             <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами</h3>
-            <form action="" class="form modal__form">
+            <form action="#" class="form modal__form">
                 <div class="input-group modal__input-group">
                     <label for="user-name" class="label form__label label--light">Имя</label>
-                    <input type="text" autocomplete="off" name="userName" class="input form__input modal__input input--light" id="user-name" placeholder="Как вас зовут">
+                    <input type="text" autocomplete="off" name="userName" class="input form__input modal__input input--light" id="user_name" placeholder="Как вас зовут">
                 </div>
                 <div class="input-group modal__input-group">
                     <label for="user-phone" class="label form__label label--light">Телефон</label>
-                    <input type="tel" autocomplete="off" name="userPhone" class="input form__input modal__input input--light" id="user-phone" placeholder="Ваш номер телефона">
+                    <input type="tel" autocomplete="off" name="userPhone" class="input form__input modal__input input--light" id="user_phone" placeholder="Ваш номер телефона">
                 </div>
                 <div class="input-group modal__input-group">
                     <label for="user-email" class="label form__label label--light">Email</label>
-                    <input type="email" autocomplete="off" name="userEmail" class="input form__input modal__input input--light" id="user-email" placeholder="Ваш email">
+                    <input type="email" autocomplete="off" name="userEmail" class="input form__input modal__input input--light" id="user_email" placeholder="Ваш email">
                 </div>
                 <div class="policy modal__policy">
-                    <input type="checkbox" class="policy__checkbox" name="policy-checkbox" id="policy-checkbox" checked>
-                    <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
+                    <input type="checkbox" class="policy__checkbox" id="policy_checkbox" name="policyCheckbox" checked>
+                    <label for="policy_checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
                 </div>
                 <button class="button button--primary modal__button">Отправить заявку</button>
             </form>
