--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>        
+    <title>Repair Design</title>        
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
@@ -428,17 +428,17 @@
                 <div class="section-title types__section-title">
                     <h2 class="section-title__heading wow slideInUp">наша команда</h2>
                     <div class="section-title__image">
-                        <img src="img/icon/team-icon.svg" alt="Дизайн проект">
+                        <img src="img/icon/team-icon.svg" alt="наша команда">
                     </div>
                     <p class="card__subtitle our-team__subtitle">Наша команда помогла стать счастливее более чем 500 семьям, и мы не собираемся останавливаться</p>
                 </div>
                 <div class="row">
-                    <div class="col-30">
-                        <button class="our-team__icon">
+                    <div class="col-35">
+                        <button class="our-team__icon wow zoomIn" data-wow-delay="0.2s" >
                             <img src="img/our_team/first/icon/idea.png" alt="иконка-1" class="team-icon">
                         </button>
                         <div class="card types__card wow zoomIn" data-wow-delay="0.2s">
-                            <img src="img/our_team/first/image1.png" alt="Алексей Колмаков" class="card__image">
+                            <img src="img/our_team/img1.jpg" alt="Алексей Колмаков" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Алексей Колмаков</h3>
                                     <p class="card__item">Проектный менеджер</p>
@@ -451,12 +451,12 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col-30">
-                        <button class="our-team__icon">
-                            <img src="img/our_team/2/icon/Group 15.svg" alt="иконка-2" class="team-icon">
+                    <div class="col-35">
+                        <button class="our-team__icon wow zoomIn" data-wow-delay="0.4s">
+                            <img src="img/our_team/2/icon/Group 15.svg"  alt="иконка-2" class="team-icon">
                         </button>
                         <div class="card types__card wow zoomIn" data-wow-delay="0.4s">
-                            <img src="img/our_team/2/image2.png" alt="Алиса Сухорукова" class="card__image">
+                            <img src="img/our_team/img2.jpg" alt="Алиса Сухорукова" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Алиса Сухорукова</h3>
                                     <p class="card__item">Дизайнер</p>
@@ -469,12 +469,12 @@
                         <!-- /.card -->
                     </div>
                     <!-- /.col -->
-                    <div class="col-30">
-                        <button class="our-team__icon">
+                    <div class="col-35">
+                        <button class="our-team__icon wow zoomIn" data-wow-delay="0.6s">
                             <img src="img/our_team/3/icon/portfolio.svg" alt="иконка-3" class="our-teamicon">
                         </button>
                         <div class="card types__card wow zoomIn" data-wow-delay="0.6s">
-                            <img src="img/our_team/3/image3.png" alt="Давид Волынев" class="card__image">
+                            <img src="img/our_team/img3.jpg" alt="Давид Волынев" class="card__image">
                             <div class="card__text our-team__card">
                                 <h3 class="card__title">Давид Волынев</h3>
                                     <p class="card__item">Бригадир</p>
